

** 1.9.x

1.9.2 --> 1.9.3
===============

* Fix a bug where preceding commas in tuple sections were counted
  one too few.

1.9.1 --> 1.9.2
===============

* Fix a bug with pretty-printing lexer tokens.

* Fix a bug where non-colon TypeOperators could not be used in
  prefix mode.

1.9.0 --> 1.9.1
===============

* Export parseFileContentsWithExts from .Exts.


1.8.2 --> 1.9.0
===============

* OptionPragma is renamed to the more descriptive ModulePragma,
  and adds a constructor AnnModulePragma for handling ANN pragmas
  preceding module header.

* Add instances for Eq/Ord/Data/Typeable for Fixity.

* Add 'parseFileWithComments' and 'parseFileContentsWithComments'
  to L.H.Exts .

* More informative error messages when HSX tags are mismatched.


** 1.8.x

1.8.1 --> 1.8.2
===============

* Don't insert redundant parentheses around record constructions
  and updates.

1.8.0 --> 1.8.1
===============

* Fix three bugs with the handling of ANN. I must have been really
  tired when implementing that support.

1.7.2 --> 1.8.0
===============

* Add an instance Show Fixity (derived).

* Support for the new ANN and INLINE_CONLIKE pragmas.

* Export knownExtensions from .Extension.

* Remove support for CFILES and INCLUDE pragmas. The support wasn't 
  correct anyway, as it assumed the pragmas appeared at the top of 
  files. As CFILES/INCLUDE pragmas can (and do) appear anywhere, 
  there's no hope to support them in the AST. Better to remove the 
  support altogether. Files with CFILES/INCLUDE pragmas can still 
  be parsed of course, but those pragmas will be handled as comments.

* Parsing with ignoreLinePragmas = False now correctly updates the
  file name.

* Allow the whole SPECIALISE/INLINE family of pragmas in instance
  declarations. The InsInline constructor is removed, and is now
  represented by InsDecl (InlineSig ...).

* Fix a bug with line numbering and quasi quotes, and a similar one 
  with line numbering and CDATA.
